# artery_vision

./: .gitignore  CMakeLists.txt  README.md
data/multi_cam/scene01/: meta
data/multi_cam/scene02/: meta
data/real/png/: meta
data/renders/easy_flow_2/: meta
data/renders/easy_flow_3/: meta
data/renders/flow_1/: meta
data/scenes/: aorta_to_brain_real_xray.blend  aorta_to_brain_real_xray.blend1  easy_flow_2.blend  easy_flow_2.blend1  easy_flow_3.blend  easy_flow_3.blend1  example_1.blend  example_1.blend1  graph.txt  real_brain.blend1
data/scenes/3d print frames/: aorta_to_brain_3dprint_0.stl  aorta_to_brain_3dprint_1.stl  aorta_to_brain_3dprint_3.stl
data/scenes/movie/: aorta_to_brain_3dprint_2.stl  aorta_to_brain_3dprint_4.stl
data/scenes/source/: arteries.fbx
data/scripts/: 2cameras_render  aorta_to_brain  easy_flow_1 render  easy_flow_2 render  easy_flow_3 render  flow_1 render  heart_render  importBalls  importBlender  impotSphrers  real_brain_render
exampleBin/: CMakeCache.txt  CTestTestfile.cmake  Makefile  artery_vision  artery_vision.cbp  cmake_install.cmake
exampleBin/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_net
include/: arteryNet.h  arteryNet2.h  artery_replicator.h  ball.h  ball_optimizer.h  camera.h  imageData.h  imageData2.h  image_stereo_analyzer.h  stereo_camera.h
src/: main.cpp
src/apps/: 2camtime.cpp  CMakeLists.txt  ball_optimization.cpp
src/arteryNet/: arteryNet.cpp
src/arteryNet2/: arteryNet2.cpp
src/artery_replicator/: artery_replicator.cpp
src/ball/: ball.cpp
src/ball_optimizer/: ball_optimizer.cpp
src/camera/: camera.cpp
src/imageData/: imageData.cpp
src/imageData2/: imageData2.cpp
src/imageStereoAnalyzer/: image_stereo_analyzer.cpp
src/stereo_camera/: stereo_camera.cpp
test/: Base.h  CMakeLists.txt  test_camera.cpp  test_net.cpp
test/data/: basic  projection  welldefined
